setup latest version
